# AgenticAIWorkspace

./: .env.example  pyproject.toml  requirements.txt
1-Langgraph Basics/: 1-simple-graph.ipynb  1-simplegraph.ipynb  2-chatbot.ipynb  3-DataclassStateSchema.ipynb  4-pydantic.ipynb  5-ChainsLangGraph.ipynb  6-chatbotswithmultipletools.ipynb  7-ReActAgents.ipynb
2-Langgraph-advance/: 1-streaming.ipynb
3-Debugging/: langgraph.json  openai_agent.py
3-Debugging/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
4-Agentic-RAG/: 1-agenticrag.ipynb  2-ReAct.ipynb
5-RAGS/: 1-AgenticRAG.ipynb
6-Autonomus-RAG/: 3-COTRag.ipynb  4-Selfreflection.ipynb  5-QueryPlanningdecomposition.ipynb  6-Iterativeretrieval.ipynb  7-answersynthesis.ipynb  8-multiagent.ipynb
