[project]
name = "agenticaiworkspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "langchain>=1.3.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.4.0",
    "langgraph>=1.2.0",
]
